Added center-screen and info

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,8 @@
             {
                 "trailingComma": "es5",
                 "sigleQuote": true,
-                "printWidth": 120
+                "printWidth": 120,
+                "endOfLine": "auto"
             }
         ]
     },
